Leverage Scala 3.8.2: ZGC generational, SIP-62 benchmarks, @unchecked docs
- Add -XX:+ZGenerational to test javaOptions and @Fork annotations for
  consistent ZGC generational mode across tests and JMH benchmarks
- Add ForComprehensionBench exercising SIP-62 Better Fors optimizations
  (redundant map elimination, tuple-free val bindings, deep chains)
- Document @unchecked erasure rationale in UnifiedFiber and ErrorHandling
- Update README: Scala 3.8.2 requirement, VarHandle lazy vals, correct
  that structured concurrency is Eru's own (not inherited from JDK)